small generalization changes

--- a/Server/src/main/resources/application.conf
+++ b/Server/src/main/resources/application.conf
@@ -4,7 +4,7 @@ ktor {
         port = ${?PORT}
     }
     application {
-        modules = [ scheduler.ApplicationKt.module ]
+        modules = [server.ApplicationKt.module]
     }
     auth0 {
         domain = "youraccount.auth0.com"
